--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,20 +1,11 @@
+<!doctype html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Coral Client</title>
+  </head>
   <body>
-    <h2>Settings</h2>
-    <label for="email">E-mail</label>
-    <input id="email"
-      type="email"
-      name="email"
-      value="">
-    <br>
-    <br>
-    <label for="email">Groups</label>
-    <input id="groups"
-      type="text"
-      name="groups"
-      value="">
-    <br>
-    <br>
-    <button>Save</button>
+
+    <script src="bundle.js"></script>
   </body>
 </html>
