Added Highlight functionality and popup

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,11 +1,23 @@
 <!doctype html>
 <html>
+
   <head>
     <meta charset="UTF-8">
     <title>Coral Client</title>
+    <link rel="stylesheet" href="popup.css">
   </head>
-  <body>
 
-    <script src="bundle.js"></script>
+  <body class="popup-wrapper">
+    <ul class="list">
+      <li>
+        <button id="cora-highlight-items">Highlight Items</button>
+      </li>
+      <li>
+        <button id="cora-push-items">Push Items</button>
+      </li>
+    </ul>
+    <script src="jquery-3.2.1.min.js"></script>
+    <script src="popup.js"></script>
   </body>
+
 </html>
